<resources>
    <string name="app_name">Adding numbers</string>
    <string name="number_composition">Состав числа</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="ok">Понятно!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_difficulty">Выберите сложность:</string>
    <string name="easy">Лёгкий</string>
    <string name="test">Тестовый</string>
    <string name="medium">Средний</string>
    <string name="hard">Сложный</string>
    <string name="question_sign">\?</string>
    <string name="right_answers">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game over</string>
    <string name="quantity_of_answers_u_need">Необходимое количество правильных ответов: %s</string>
    <string name="ur_score">Ваш счёт: %s</string>
    <string name="percent_of_right_answers_u_need">Необходимый процент правильных ответов: %s</string>
    <string name="ur_score_in_percent">Процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова!</string>
</resources>