<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_difficulty"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:textColor="@color/pink"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/button_test_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        />
    <Button
        android:id="@+id/button_easy_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@android:color/holo_green_light"
        />
    <Button
        android:id="@+id/button_medium_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:textColor="@color/white"
        android:backgroundTint="@android:color/holo_orange_light"
        />
    <Button
        android:id="@+id/button_hard_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"
        android:textColor="@color/white"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@android:color/holo_red_light"
        />

</LinearLayout>